[tool.poetry]
name = "torch-influence"
version = "0.1.0"
description = "Fork of alstonlo/torch-influence."
authors = ["camhpj <cjohnson23@gwu.edu>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
tqdm = "^4.66.2"
jupyter = "^1.0.0"
ipywidgets = "^8.1.2"
jupyterlab-widgets = "^3.0.10"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
pytest = "^8.1.1"
flake8 = "^7.0.0"
torch = "^2.2.1"
torchvision = "^0.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"